# cargo-bikes

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: copilot_story.md
.github/actions/setup/: action.yaml
.github/instructions/: markdown.instructions.md  python.instructions.md
.github/prompts/: bike-note-updater.prompt.md  fetch-bikes.prompt.md  fetch-reseller-prices.prompt.md  generate-brand-index-pages.prompt.md  migrate-schema-quick-ref.prompt.md  migrate-schema.prompt.md  prompt-builder.prompt.md  search-bike-reviews.prompt.md
.github/workflows/: CI.yaml  copilot-setup-steps.yml  deploy-pages.yml  update-bike-notes.yml
docs/: BIKE_NOTE_UPDATER.md  GENERATE_BIKE_TABLE.md  PLUGINS_QUICK_START.md  VALIDATE_URLS.md  architecture.md  prd.md
docs/schema/: BIKE_SPECS_SCHEMA.md  COMPONENT_SCHEMA.md  MANUFACTURER_SCHEMA.md
docs/stories/: 1.1.database-schema-and-initialization.md  1.2.custom-markdown-structural-linter.md  1.3.hydration-script-md-files-to-database.md  1.4.projection-script-database-to-md-files.md
scripts/: VALIDATE_URLS_CHANGELOG.json  __init__.py  add_bike_table_markers.py  generate_bike_table.py  generate_brand_indexes.py  validate_urls.py
scripts/bike_note_updater/: README.md  __init__.py  __main__.py  agent.py  cli.py  data_fetcher.py  models.py  note_merger.py  note_writer.py  schema_validator.py  utils.py
scripts/database/: __init__.py  hydrate.py  init_db.py  project.py  schema.py
scripts/linters/: __init__.py  validate_structure.py
src/cargo_bikes/: __init__.py  __main__.py  mkdocs_wikilinks.py
src/cargo_bikes/db/: __init__.py  cli.py  hydrate.py  init_db.py  project.py
src/cargo_bikes/enrich/: __init__.py  accessories.py  agent.py  cli.py  components.py  content.py  harmonize.py  prompts.py  research.py  review.py  schemas.py  translate.py
src/cargo_bikes/generate/: __init__.py  bases.py  bike_markers.py  bike_table.py  brand_indexes.py  cli.py  links.py
src/cargo_bikes/validate/: __init__.py  cli.py  structure.py  urls.py
src/cargo_bikes/vault/: __init__.py  frontmatter.py  scanner.py
taskfiles/: mkdocs.yaml  precommit.yaml  python.yaml
tests/: conftest.py  test_add_bike_table_markers.py  test_bike_note_updater_merger.py  test_bike_note_updater_models.py  test_bike_note_updater_validator.py  test_bike_note_updater_writer.py  test_database_init.py  test_generate_bike_table.py  test_generate_brand_indexes.py  test_hydration.py  test_linter.py  test_projection.py  test_validate_urls.py
tests/test_bike_note_updater/: __init__.py  test_models.py  test_note_merger.py  test_note_writer.py  test_schema_validator.py  test_utils.py
vault/: README.md  accessories.base  bikes-by-category.base  bikes-by-price.base  brands.base  components.base  conversations.base  motors.base
vault/.obsidian/: app.json  community-plugins.json  core-plugins.json  workspace.json
vault/Attachments/artifacts/: c344e35d-Every Cargo E-Bike Insurance Option in France, Compared.md
vault/notes/: index.md
vault/notes/accessories/: index.md
vault/notes/addbike/: u-cargo-family.md  u-cargo-lite.md
vault/notes/amigo/: e-lagos-t2.md
vault/notes/benno/: boost-e-evo4.md  ejoy-e.md
vault/notes/benno-bikes/: boost-10d-evo-5-500wh.md  boost-e-evo4-500wh.md
vault/notes/bike43/: long.md  mid.md  short.md  standard.md
vault/notes/bikes/: index.md
vault/notes/brumaire/: longtail-nebula.md  nebula.md
vault/notes/btwin/: f900e.md  r500e.md
vault/notes/components/: index.md  motors.md
vault/notes/conor/: e-cargo-berna.md
vault/notes/cube/: longtail-hybrid-1350.md
vault/notes/decathlon/: elops-r500.md
vault/notes/douze-cycles/: heta-2s-1x10.md  lt2-s-1x10.md  lt2-s-nexus-5.md  v2-shimano-ep8-cargo.md
vault/notes/ello-mobilite/: primo-c.md  primo-s.md  tractor-s.md
vault/notes/engwe/: le20-cargo-compact.md
vault/notes/gaya/: le-cargo.md  (+5 more)
vault/templates/: bike-template.md  brand-template.md  note-template.md
(+316 files in other folders)
