[project]
name = "cargo-bikes"
version = "0.1.0"
description = "Cargo bikes vault management CLI with content generation, database sync, and AI enrichment."
authors = [{name = "pavelzbornik"}]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-obsidian-bridge>=1.3.1",
    "mkdocs-git-revision-date-plugin>=0.3",
    "mkdocs-git-authors-plugin>=0.3",
    "mkdocs-glightbox>=0.3",
    "mkdocs-table-reader-plugin>=2.0",
    "mkdocs-redirects>=1.1",
    "mkdocs-section-index>=0.3",
    "mkdocs-llmstxt>=0.4",
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "mkdocs-static-i18n>=1.0.0",
    "mkdocs-wikilinks-plugin>=0.1.2",
    "mkdocs-ezlinks-plugin>=0.1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit-uv>=4.2.0",
    "mypy>=1.14.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "sqlalchemy[mypy]>=2.0.0",
]

[project.entry-points."mkdocs.plugins"]
wikilinks-title = "cargo_bikes.mkdocs_wikilinks:WikilinksPlugin"

[project.scripts]
cargo-bikes = "cargo_bikes.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cargo_bikes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short -v"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "node_modules",
    "vault",
    ".obsidian",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/cargo_bikes"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = [".venv", "node_modules", "vault", ".obsidian", "tests"]
